复活项目：替换已下线接口，修复签名与逻辑错误，重建工程基建
原项目失效有两层原因：B 站陆续下线了一批接口，以及仓库长期没有活动导致
GitHub 自动停用了定时任务。这次把两边都修好。

接口替换（原地址已下线或已改鉴权方式）：
- x/web-interface/dynamic/region      -> 综合热门 + 首页推荐
- api.vc.bilibili.com/dynamic_svr/... -> x/polymer/web-dynamic/v1/feed/all
- x/space/arc/search                  -> x/space/wbi/arc/search
- gift/v2/live/bag_send               -> xlive/revenue/v1/gift/sendBag
- relation/v1/AppWeb/getRecommendList -> xlive/web-interface/v1/second/getList
- pay/v1/Exchange/silver2coin         -> xlive/revenue/v1/wallet/silver2coin
- sc.ftqq.com / pushplus.hxtrip.com   -> sctapi.ftqq.com / www.pushplus.plus
所有地址集中到新增的 BiliApi，以后接口再变只改一处。

逻辑修复：
- WBI 签名漏掉参数值的 URL 编码，含空格或中文的参数一律签名失败；同时移除
  一个并不存在的 w_ks 参数。签名改为直接发送签名时用的那串查询串，杜绝二次
  编码带来的偏差，并补上对照官方示例值的单元测试。
- bili_ticket 参数被塞进 POST 表单体，而接口只认查询串，服务端一直回
  "-400 empty ts field"，这个降低风控概率的 Cookie 从未真正生效。
- 每日任务接口从 home/reward 换到 x/member/web/exp/reward 后字段名由 coins_av
  变为 coins，代码没跟着改，"今日已投币"永远读成 0，每次运行都会重复投满 5 个币。
- 限速的每分钟计数器不会归零，跑到后面每个请求都要干等一分钟，再撞上写死的
  2 分钟超时，任务经常没跑完就被强杀。改为滑动窗口，超时时间可配置。
- 投币请求携带 eab_x/ramval/ga 等接口并不认识的参数，外面还套三层重试，每次
  重试前重新拉取视频详情，请求量翻数倍反而更易触发风控。
- StringUtil.hideString 在字符串短于 startLen+endLen 时算出负数长度，配合
  length-- != 0 会一路减到 int 下溢，等于死循环。
- 每日任务固定取视频列表第 6 条，接口少返回几条就数组越界。
- 任务执行顺序依赖类名字典序，改为在 TaskRegistry 中显式定义：先领 B 币券再
  花券，先直播签到再送礼物。
- 大会员权益不再写死每月 1 号，改为查 x/vip/privilege/my 后领取未领取项。
- 漫画接口出错时 code 是字符串，按 int 读会抛异常，统一走 Request.code()。
- 请求补上 buvid3/buvid4/bili_ticket，UA 不再拼出并不存在的 Chrome 版本号。

工程基建：
- Java 11 -> 17，Gradle 8.5 -> 8.14.3，shadow 换成维护中的 com.gradleup.shadow
- 依赖升级：fastjson2 2.0.62、logback 1.5.38、snakeyaml 2.6、JUnit 5.14.4
- 新增 27 个单元测试，覆盖签名、字段归一化、配置解析、响应解析等纯逻辑部分
- 新增 build 工作流：PR 与分支推送只做编译和测试，不需要 Secrets
- 新增 keepalive 工作流，每月空提交，避免定时任务因仓库不活跃被停用
- 重写 Dockerfile（JDK 8 基础镜像早已停止维护），清理误提交的 CI 日志与 .idea

说明：编译与单元测试均通过，但沙箱内无法访问 B 站，接口层改动依据的是 web 端
公开行为与 bilibili-API-collect 文档，首次部署建议手动触发一次并核对日志。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019kmfGP