@@ -11,23 +11,33 @@ import top.srcrs.task.live.GiveGiftTask;
 import top.srcrs.task.live.Silver2CoinTask;
 import top.srcrs.task.manga.MangaTask;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 /**
- * 运行所有已注册的Task
+ * 任务清单。
+ * <p>
+ * 老实现靠反射扫类、再按类名排序决定执行顺序，注释里还写着"在 Linux 中并不是字典排序我就很迷茫"。
+ * 顺序本来就是业务需求（比如要先领到 B 币券才谈得上花掉它），按需要的顺序直接列出来更清楚。
  *
  * @author srcrs
  * @Time 2020-10-13
  */
 @Slf4j
-public abstract class TaskRegistry {
+public final class TaskRegistry {
 
-    private static final List<Class<? extends Task>> REGISTERED_TASKS = Arrays.asList(
-            BiCoinApply.class,
+    private TaskRegistry() {
+    }
+
+    /** 按执行顺序排列 */
+    private static final List<Class<? extends Task>> TASKS = List.of(
+            // 先领本月的大会员权益，B 币券到账之后下一个任务才有的花
             CollectVipGift.class,
+            BiCoinApply.class,
+            // 观看、分享，然后投币
             DailyTask.class,
             ThrowCoinTask.class,
+            // 直播签到要排在送礼物前面，签到礼物到账才能送出去
             BiLiveTask.class,
             GiveGiftTask.class,
             Silver2CoinTask.class,
@@ -35,16 +45,28 @@ public abstract class TaskRegistry {
     );
 
     /**
-     * 运行所有已注册任务
+     * 任务类清单。
+     *
+     * @return 按执行顺序排列的任务类
      */
-    public void runTasks() {
-        REGISTERED_TASKS.stream().map(Class::getName).forEach(this::dealClass);
+    public static List<Class<? extends Task>> tasks() {
+        return TASKS;
     }
 
     /**
-     * 获得真实的className
+     * 实例化全部任务。
      *
-     * @param className className
+     * @return 任务实例，构造失败的会被跳过
      */
-    public abstract void dealClass(String className);
+    public static List<Task> instantiate() {
+        List<Task> tasks = new ArrayList<>(TASKS.size());
+        for (Class<? extends Task> clazz : TASKS) {
+            try {
+                tasks.add(clazz.getDeclaredConstructor().newInstance());
+            } catch (ReflectiveOperationException e) {
+                log.error("💔任务 [{}] 创建失败: ", clazz.getSimpleName(), e);
+            }
+        }
+        return tasks;
+    }
 }
